Sharing Component updates - - CSS Fixes: * PDF overflow on parent container * PDF, images and videos centered - UI: * Once something is uploaded, inputs are hidden for respective container * each container can only upload on thing at a time and show one thing * Once user clicks posts, they go to viewing post component * Viewing Component shows youtube videos, pdfs and images - Logic: * search result click takes to viewing post component * viewing post component loads pdf images and videos from backend response

--- a/teachers-website/src/app/components/sharing/sharing.component.scss
+++ b/teachers-website/src/app/components/sharing/sharing.component.scss
@@ -22,4 +22,12 @@
     width:500px;
     height:450px;
     margin: 10px;
+  overflow: scroll;
+  text-align: center;
 }
+
+#pdf-viewer-container {
+  border: groove;
+  transform: scale(0.9);
+}
+
